feat: Prepare UEM and WoM Integration APIs - MEED-2392 - Meeds-io/MIPs#58